[package]
name = "pajbot3"
authors = ["Ruben Anders <ruben.anders@robotty.de>"]
description = "Twitch moderation bot"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pajbot/pajbot3"
keywords = ["twitch", "twitch-bot"]
categories = ["web-programming"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
axum = { version = "0.6", features = ["headers", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
http = "0.2"
humantime-serde = "1"
hyper = "0.14"
itertools = "0.11"
lazy_static = "1"
log = "0.4"
maplit = "1"
rand = "0.8"
reqwest = { version = "0.11", features = ["rustls-tls-webpki-roots", "json", ], default-features = false }
rustls = "0.21"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", ] }
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tower-http = { version = "0.4", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "0.25"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.8"
