[package]
name = "pajbot3"
authors = ["Ruben Anders <ruben.anders@robotty.de>"]
description = "Twitch moderation bot"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pajbot/pajbot3"
keywords = ["twitch", "twitch-bot"]
categories = ["web-programming"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
http = "1.1"
humantime-serde = "1"
hyper = "1.2"
itertools = "0.12"
lazy_static = "1"
log = "0.4"
maplit = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls-webpki-roots", "json", ], default-features = false }
rustls = "0.23"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", ] }
sea-orm-migration = { version = "0.12", features = ["runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
webpki-roots = "0.26"
twitch_api = { git = "https://github.com/twitch-rs/twitch_api/", features = ["helix", "eventsub", "hmac", "reqwest"] }
twitch_oauth2 = { git = "https://github.com/twitch-rs/twitch_api/" }
twitch_types = { git = "https://github.com/twitch-rs/twitch_api/" }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.5.0"
dashmap = "5.5.3"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.8"

# workaround for https://github.com/twitch-rs/twitch_api/issues/256
[patch.crates-io.twitch_types]
git = "https://github.com/twitch-rs/twitch_api"
[patch.crates-io.twitch_oauth2]
git = "https://github.com/twitch-rs/twitch_api"
